--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.org/">Rails Tutorial</a>
+    <a href="http://www.physics.mcgill.ca">McGill Department of Physics</a>
     by Jamob The Elephant
   </small>
   <nav>
@@ -11,9 +11,10 @@
         <li><%= link_to "Users", users_path %></li>
         <li><%= link_to "Profile", current_user %></li>
         <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-        <p>|</p>
+        <li>|</li>
         <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
       <% else %>
+        <li>|</li>
         <li><%= link_to "Sign in", signin_path %></li>
       <% end %>
     </ul>
