--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,6 +22,7 @@
     <% end %>
 
     <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
+    <% link = "http://gravatar.com/emails" %>
+    <%= link_to "change", link, :target => "_blank" %>
   </div>
 </div>
