--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,6 +19,10 @@ html {
 
 body {
   padding-top: 60px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  background-color: white;
 }
 
 table {
@@ -92,6 +96,10 @@ p {
   }
 }
 
+nav{
+  font-size: 1.1em;
+  padding-top: 3px;
+}
 pull-right{
   color: #ff0000;
 }
@@ -198,4 +206,18 @@ input, textarea, select, .uneditable-input {
       border-bottom: 1px solid $grayLighter;
     }
   }
+}
+
+/* sidemenu */
+
+.sidebar-nav{
+  background-color: white;
+  border: none;
+  padding-top: 20px;
+  padding-bottom: 9px;
+  padding-left: 9px;
+  padding-right: 9px;
+  left: 20px;
+  top: 150px;
+  width: 250px;
 }
