--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "About", about_path %></li>
-          <li><%= link_to "Contact", users_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
           <li><%= link_to "Events", '#' %></li>
           <li><%= link_to "Help", help_path %></li>
         </ul>
