--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,17 @@
 <body>
   <%= render 'layouts/header' %>
   <div class="container">
-    <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
-    <% end %>
-    <%= yield %>
+    <div class="row">
+      <div class="span10">
+        <% flash.each do |key, value| %>
+          <div class="alert alert-<%= key %>"><%= value %></div>
+        <% end %>
+        <%= yield %>
+      </div>
+      <%= render 'layouts/sidemenu' %>
+  </div>
     <%= render 'layouts/footer' %>
-    <debug(params) if Rails.env.development? %>
+    <%= debug(params) if Rails.env.development? %>
   </div>
 
 </body>
