--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,7 +22,6 @@
     <% end %>
 
     <%= gravatar_for @user %>
-    <% link = "http://gravatar.com/emails" %>
-    <%= link_to "change", link, :target => "_blank" %>
+    <%= link_to "change", "http://gravatar.com/emails", target:  "_blank" %>
   </div>
 </div>
