--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<%= provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<%= provide(:title, 'Create user') %>
+<h1>Create User</h1>
 
 <div class="row">
   <div class="span6 offset3">
@@ -18,7 +18,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Create a user", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
