--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,7 @@
 <footer class="footer">
-  <small>
-    © 2012 McGill Society of Physics Students. Website developed with <%= link_to "Ruby on Rails", "http://rubyonrails.org/", target: "_blank" %> and <%= link_to "Twitter Bootstrap", "http://twitter.github.com/bootstrap/", target: "_blank" %>.
-  </small>
+<div class="container">
+  <p></p>
+    © Powered by <%= link_to "Ruby on Rails", "http://rubyonrails.org/", target: "_blank" %> and <%= link_to "Twitter Bootstrap", "http://twitter.github.com/bootstrap/", target: "_blank" %>.
+  </div>
 </footer>
  
