--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,16 @@
 <body>
   <%= render 'layouts/header' %>
   <div class="container">
-    <div class="row">
-      <div class="span10">
+      <div class="span12 offset1">
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key %>"><%= value %></div>
         <% end %>
         <%= yield %>
       </div>
       <%= render 'layouts/sidemenu' %>
-  </div>
-    <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
   </div>
 
+    <%= render 'layouts/footer' %>
 </body>
 </html>
