--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,16 @@
 <% provide(:title, "Edit user") %>
-<h1>Update your profile</h1>
+<h1>Update user infomration</h1>
 
 <div class="row">
-  <div class="span6 offset3">
+  <div class="span6 offset2">
     <%=form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.text_field :email %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Confirm Password" %>
-      <%= f.password_field :password_confirmation %>
-
+      <%= render 'form', f: f %>
+      <% if current_user.admin? %>
+        <%= f.label :admin %>
+        <%= f.check_box :admin %>
+        <br />
+        <br />
+      <%end %>
       <%= f.submit "Save changes", class:"btn btn-large btn-primary" %>
     <% end %>
 
