--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,10 @@
-<%= provide(:title, 'Create user') %>
+<% provide(:title, 'Create user') %>
 <h1>Create User</h1>
 
 <div class="row">
-  <div class="span6 offset3">
+  <div class="span5 offset2">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.text_field :email %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
-
+      <%= render 'form', f: f %>
       <%= f.submit "Create a user", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
