fb kinda running

--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -1,6 +1,7 @@
 <div class="span3">
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
+      <li><div class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div></li>
       <li class="nav-header">Archives</li>
       <li><%= link_to "Archives", '#' %></li>
       <li class="nav-header">Categories</li>
