--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
   <% end%>
 </div>
 
-<% @posts.reverse!.each do |p| %>
+<% @posts.each do |p| %>
   <div class="row">
       <h3><%= link_to p.title, post_path(p) %></h3>
         <p></p> 
