--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,7 +11,9 @@
         <br />
         <br />
       <%end %>
-      <%= f.submit "Save changes", class:"btn btn-large btn-primary" %>
+      <div class="offset1">
+        <%= f.submit "Save changes", class:"btn btn-large btn-primary" %>
+      </div>
     <% end %>
 
     <%= gravatar_for @user %>
