--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,7 +18,7 @@ html, body {
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
     border: 0 none;
     font-family: inherit;
-    font-size: 100%;
+    font-size: 105%;
     font-style: inherit;
     font-weight: inherit;
     margin: 0;
@@ -47,7 +47,7 @@ html {
     background-color: #2c2c2c;
     width: 1060px;
     background-image: -moz-linear-gradient(center top , #333333, #222222);
-    background: repeat-x
+  ackground: repeat-x
   }
 }
 
@@ -499,7 +499,7 @@ label {
     font-size: 13px;
     line-height: 18px;
     padding-top: 6px;
-    text-align: right;
+    text-align: left;
     width: 130px;
 }
 form .input {
