--- a/app/views/layouts/_sidemenu.html.erb
+++ b/app/views/layouts/_sidemenu.html.erb
@@ -1,13 +1,12 @@
 <div class="span3">
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
-      <li><div class="fb-login-button" data-show-faces="false" data-width="200" data-max-rows="1"></div></li>
       <li class="nav-header">Archives</li>
       <li><%= link_to "Archives", '#' %></li>
       <li class="nav-header">Categories</li>
       <li><%= link_to "Categories", '#' %>
       <li class="nav-header"><%= link_to "Contact", contact_path %></li>
-      <li><%= link_to "MSPS on Facebook", '#', target: '_blank' %></li>
+      <li><%= link_to "MSPS on Facebook", facebook_path %></li>
       <li><%= link_to "MSPS wiki", 'http://www.ugrad.physics.mcgill.ca/wiki/index.php/Main_Page', target: '_blank' %></li>
       <li><%= link_to "Events", '#' %></li>
       <li class="nav-header">Administration</li>
