--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,4 +6,21 @@
 <%end%></h1>
 <%= @post.title %>
 <%= @post.content %>
+<p></p>
+<h3>Comments</h3>
+<% @post.comments.each do |comment| %>
+  <p><%= comment.commenter %></p>
+  <p><%= comment.body %></p>
+<%end%>
+
+<h2>Add a comment:</h2>
+<%= form_for([@post, @post.comments.build]) do |f| %>
+    <%= f.label :commenter %>
+    <%= f.text_field :commenter %>
+
+    <%= f.label :body %>
+    <%= f.text_area :body %>
+
+    <%= f.submit "Comment", class: "btn btn-large btn-primary" %>
+  <%end%>
 <%= link_to "Back", posts_path %>
