--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,9 @@
   <div class="span5 offset2">
     <%= form_for(@user) do |f| %>
       <%= render 'form', f: f %>
-      <%= f.submit "Create a user", class: "btn btn-large btn-primary" %>
+      <div class="offset1">
+        <%= f.submit "Create a user", class: "btn btn-large btn-primary" %>
+        </div>
     <% end %>
   </div>
 </div>
